기능추가: 게시판 글쓰기 모드로 이동하기

--- a/views/board.ejs
+++ b/views/board.ejs
@@ -14,7 +14,7 @@
       </div>
       <div class="board_write">
         <span>현재 등록 글: <%= articleCnts %></span>
-        <a href="">글쓰기</a>
+        <a href="/board/write">글쓰기</a>
       </div>
       <div class="board_body">
         <ul class="board">
