기능추가: 게시판 글수정 모드로 이동하기

--- a/views/board.ejs
+++ b/views/board.ejs
@@ -24,7 +24,7 @@
                 <div class="title"><%= POST[i].title %></div>
                 <div class="content"><%= POST[i].content %></div>
                 <div class="foot">
-                  <a href="">수정</a>
+                  <a href="board/modify/<%= POST[i].title %>">수정</a>
                   <a href="">삭제</a>
                 </div>
               </li>
