--- a/views/board_modify.ejs
+++ b/views/board_modify.ejs
@@ -5,14 +5,15 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
   <div class="inner">
     <div class="board_container">
       <div class="board_header">
-        <h1>Write Mode</h1>
+        <h1>글 수정하기</h1>
       </div>
-      <form action="/board/modify/<%=selectedPost.title%>" method="POST">
+      <form action="/board/modify/<%=selectedPost.title%>" method="POST" class="board_form">
         <div class="form_title">
           <h3>제목</h3>
           <input type="text" name="title" value="<%= selectedPost.title%>" required />
@@ -21,7 +22,7 @@
           <h3>내용</h3>
           <textarea name="content" id="content" cols="30" rows="10" required><%= selectedPost.content %></textarea>
         </div>
-        <button type="submit">글 수정하기</button>
+        <button type="submit" class="btn">글 수정하기</button>
       </form>
     </div>
   </div>
