--- a/views/board_write.ejs
+++ b/views/board_write.ejs
@@ -5,6 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
   <div class="inner">
@@ -12,7 +13,7 @@
       <div class="board_header">
         <h1>글쓰기</h1>
       </div>
-      <form action="/board/write" method="POST">
+      <form action="/board/write" method="POST" class="board_form">
         <div class="form_title">
           <h3>제목</h3>
           <input type="text" name="title" required />
@@ -21,7 +22,7 @@
           <h3>내용</h3>
           <textarea name="content" id="content" cols="30" rows="10" required></textarea>
         </div>
-        <button type="submit">글 작성하기</button>
+        <button type="submit" class="btn">글 작성하기</button>
       </form>
     </div>
   </div>
