--- a/views/board.ejs
+++ b/views/board.ejs
@@ -15,17 +15,17 @@
       </div>
       <div class="board_write">
         <span>현재 등록 글: <%= postCnts %></span>
-        <a href="/board/write" class="btn">글쓰기</a>
+        <a href="/dbBoard/write" class="btn">글쓰기</a>
       </div>
       <div class="board_body">
         <ul class="board">
           <% if (postCnts > 0) { %>
             <% for (let i = 0; i < postCnts; i++) { %>
               <li>
-                <div class="title"><%= POST[i].title %></div>
-                <div class="content"><%= POST[i].content %></div>
+                <div class="title"><%= POST[i].TITLE %></div>
+                <div class="content"><%= POST[i].CONTENT %></div>
                 <div class="foot">
-                  <a href="board/modify/<%= POST[i].title %>" class="btn">수정</a>
+                  <a href="dbBoard/modify/<%= POST[i].title %>" class="btn">수정</a>
                   <a href="#" onclick="deletePost('<%= POST[i].title %>')" class="btn">삭제</a>
                 </div>
               </li>
