기능변경: 게시판 글수정 모드로 이동하기 - DB 연결

--- a/views/board.ejs
+++ b/views/board.ejs
@@ -25,7 +25,7 @@
                 <div class="title"><%= POST[i].TITLE %></div>
                 <div class="content"><%= POST[i].CONTENT %></div>
                 <div class="foot">
-                  <a href="/board/modify/<%= POST[i].title %>" class="btn">수정</a>
+                  <a href="/board/modify/<%= POST[i].ID_PK %>" class="btn">수정</a>
                   <a href="#" onclick="deletePost('<%= POST[i].title %>')" class="btn">삭제</a>
                 </div>
               </li>
