기능변경: 메인 페이지 메뉴 생성

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,7 +7,11 @@
   <title>Document</title>
 </head>
 <body>
-  <h1>Main Page</h1>
-  <p><%= msg%> 확인 완료</p>
+  <div class="inner">
+    <h1 class="title">0l0jjo's Express Service</h1>
+    <div class="menu">
+      <h2><a href="/board">게시판 서비스 바로가기</a></h2>
+    </div>
+  </div>
 </body>
 </html>
