테스트: 프론트 쿠키 사용 기능 추가

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,5 +14,11 @@
       <h2><a href="/board">게시판 서비스 바로가기</a></h2>
     </div>
   </div>
+  <script>
+    console.log(document.cookie);
+    document.cookie = "user=0l0jjo; expires=22 Mar 2023 13:00:00 GMT; path=/";
+    document.cookie = "test=test; expires=22 Mar 2023 13:00:00 GMT; path=/";
+    console.log(document.cookie);
+  </script>
 </body>
 </html>
