--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,10 +15,11 @@
     </div>
   </div>
   <script>
-    console.log(document.cookie);
-    document.cookie = "user=0l0jjo; expires=22 Mar 2023 13:00:00 GMT; path=/";
-    document.cookie = "test=test; expires=22 Mar 2023 13:00:00 GMT; path=/";
-    console.log(document.cookie);
+    // console.log(document.cookie);
+    // document.cookie = "user=0l0jjo; expires=22 Mar 2023 13:00:00 GMT; path=/";
+    // document.cookie = "test=test; expires=22 Mar 2023 13:00:00 GMT; path=/";
+    // console.log(document.cookie);
+    if ('<%= alert %>' === 'true') alert(`쿠키의 값은 ${document.cookie}입니다`);
   </script>
 </body>
 </html>
