테스트: 특정 주소로 요청 시, 쿠키 값 전달

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,13 +13,13 @@
     <div class="menu">
       <h2><a href="/board">게시판 서비스 바로가기</a></h2>
     </div>
+    <a href="/cookie/cook">쿠키 굽기</a>
   </div>
   <script>
     // console.log(document.cookie);
     // document.cookie = "user=0l0jjo; expires=22 Mar 2023 13:00:00 GMT; path=/";
     // document.cookie = "test=test; expires=22 Mar 2023 13:00:00 GMT; path=/";
     // console.log(document.cookie);
-    if ('<%= alert %>' === 'true') alert(`쿠키의 값은 ${document.cookie}입니다`);
   </script>
 </body>
 </html>
