--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,6 +11,8 @@
   <div class="inner">
     <h1 class="title">0l0jjo's Express Service</h1>
     <div class="menu">
+      <h2><a href="/login">로그인 바로가기</a></h2>
+      <h2><a href="/register">회원가입 바로가기</a></h2>
       <h2><a href="/board">게시판 서비스 바로가기</a></h2>
     </div>
     <a href="/cookie/cook">쿠키 굽기</a>
