--- a/views/register.ejs
+++ b/views/register.ejs
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-  <div class="container-lg d-flex flex-column align-items-center bg-light w-25 mt-5 p-5 rounded-3">
+  <div class="container-lg d-flex flex-column align-items-center bg-light mt-5 p-5 rounded-3">
     <h2>회원가입</h2>
     <form action="/register" method="POST" class="w-75">
       <div class="mt-3 id">
