--- a/views/board.ejs
+++ b/views/board.ejs
@@ -16,6 +16,7 @@
       <div class="board_write">
         <span>현재 등록 글: <%= postCnts %></span>
         <a href="/board/write" class="btn">글쓰기</a>
+        <a href="/login/logout" class="btn">로그아웃</a>
       </div>
       <div class="board_body">
         <ul class="board">
