--- a/views/board.ejs
+++ b/views/board.ejs
@@ -23,11 +23,14 @@
           <% if (postCnts > 0) { %>
             <% for (let i = 0; i < postCnts; i++) { %>
               <li>
+                <div class="author">작성자: <%= POST[i].USERID %></div>
                 <div class="title"><%= POST[i].TITLE %></div>
                 <div class="content"><%= POST[i].CONTENT %></div>
                 <div class="foot">
+                  <% if (POST[i].USERID === userId) { %>
                   <a href="/board/modify/<%= POST[i].ID_PK %>" class="btn">수정</a>
                   <a href="#" onclick="deletePost('<%= POST[i].ID_PK %>')" class="btn">삭제</a>
+                  <% } %>
                 </div>
               </li>
             <% }%>
