리팩토링: 게시판 글수정 모드로 이동하기 코드 리팩토링

--- a/views/board.ejs
+++ b/views/board.ejs
@@ -28,8 +28,8 @@
                 <div class="content"><%= POST[i].CONTENT %></div>
                 <div class="foot">
                   <% if (POST[i].USERID === userId) { %>
-                  <a href="/board/modify/<%= POST[i].ID_PK %>" class="btn">수정</a>
-                  <a href="#" onclick="deletePost('<%= POST[i].ID_PK %>')" class="btn">삭제</a>
+                  <a href="/board/modify/<%= POST[i]._id %>" class="btn">수정</a>
+                  <a href="#" onclick="deletePost('<%= POST[i]._id %>')" class="btn">삭제</a>
                   <% } %>
                 </div>
               </li>
