--- a/views/board_modify.ejs
+++ b/views/board_modify.ejs
@@ -13,7 +13,7 @@
       <div class="board_header">
         <h1>글 수정하기</h1>
       </div>
-      <form action="/board/modify/<%=selectedPost.ID_PK%>" method="POST" class="board_form">
+      <form action="/board/modify/<%= selectedPost._id %>" method="POST" class="board_form">
         <div class="form_title">
           <h3>제목</h3>
           <input type="text" name="title" value="<%= selectedPost.TITLE%>" required />
