--- a/views/board.ejs
+++ b/views/board.ejs
@@ -25,7 +25,11 @@
               <li>
                 <div class="author">작성자: <%= POST[i].USERID %></div>
                 <div class="title"><%= POST[i].TITLE %></div>
-                <div class="content"><%= POST[i].CONTENT %></div>
+                <div class="content">
+                  <% if (POST[i].IMAGE !== null && POST[i].IMAGE !== undefined) { %>
+                    <img src="/uploads/<%= POST[i].IMAGE %>" width="500" />
+                  <% } %>
+                </div>
                 <div class="foot">
                   <% if (POST[i].USERID === userId) { %>
                   <a href="/board/modify/<%= POST[i]._id %>" class="btn">수정</a>
