--- a/views/board_modify.ejs
+++ b/views/board_modify.ejs
@@ -13,7 +13,7 @@
       <div class="board_header">
         <h1>글 수정하기</h1>
       </div>
-      <form action="/board/modify/<%= selectedPost._id %>" method="POST" class="board_form">
+      <form action="/board/modify/<%= selectedPost._id %>" method="POST" class="board_form" enctype="multipart/form-data">
         <div class="form_title">
           <h3>제목</h3>
           <input type="text" name="title" value="<%= selectedPost.TITLE%>" required />
@@ -21,6 +21,14 @@
         <div class="form_content">
           <h3>내용</h3>
           <textarea name="content" id="content" cols="30" rows="10" required><%= selectedPost.CONTENT %></textarea>
+        </div>
+        <div class="form-img">
+          <% if ( selectedPost.IMAGE !== null && selectedPost.IMAGE !== undefined) {%>
+            <p>기존 이미지</p>
+            <img src="/uploads/<%= selectedPost.IMAGE %>" width="500" />
+          <% } %>
+          <h3>이미지 업로드</h3>
+          <input type="file" name="img"/>
         </div>
         <button type="submit" class="btn">글 수정하기</button>
       </form>
